<resources>
    <string name="app_name">Project App Matkul Mobile</string>
    <string name="nama">Nama</string>
    <string name="npm">NPM</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="belajar_pemrograman">Belajar Pemrograman</string>
    <string name="prodi">Prodi</string>
    <string name="membaca_buku">Membaca Buku</string>
    <string name="prosses">Prosses</string>
    <string name="tambah">tambah</string>
    <string name="namaKaryawan">Nama</string>
    <string name="unit_kerja">Unit Kerja</string>
    <string name="menu_satu">Menu satu</string>
    <string name="tambah_data_mahasiswa">Tambah Data Mahasiswa</string>
    <string name="menu_karyawan">Menu Karyawan</string>
    <string name="data_mahasiswa">Data Mahasiswa</string>
    <string name="data_yang_masuk">Data Yang Masuk</string>
    <string-array name="list_prodi">
        <item>Sistem Informasi</item>
        <item>Teknik Informatika</item>
    </string-array>

    <string-array name="jumlah_anak">
        <item>Tidak punya Anak</item>
        <item>lebih dari 3 dan kurang dari 5</item>
        <item>lebih dari 5 dan kurang dari 8</item>
    </string-array>

    <string-array name="lama_bekerja">
        <item>Kurang dari 1 Tahun</item>
        <item>lebih dari 1 Tahun dan kurang dari 5 Tahun </item>
        <item>lebih dari 5 tahun </item>
    </string-array>
</resources>