<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                />

            <EditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/npm"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/etNpm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/jenis_kelamin"/>

            <RadioGroup
                android:id="@+id/rgJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbLaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/laki_laki"/>
                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prodi"
                android:layout_marginTop="12dp"/>

            <Spinner
                android:id="@+id/spProdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/list_prodi"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="12dp"/>
            <CheckBox
                android:id="@+id/cbPemrograman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belajar_pemrograman"/>
            <CheckBox
                android:id="@+id/cbBacaBuku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/membaca_buku"/>

            <Button
                android:id="@+id/btnProsses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/prosses"
                />

            <TextView
                android:id="@+id/tvDataMahasiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/data_mahasiswa"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>