<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/data_mahasiswa"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_data_mahasiswa"/>

    <Button
        android:id="@+id/btnKaryawan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_karyawan"/>


</LinearLayout>